# QuickInsight-Desktop

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TASKS.md  pyproject.toml
.github/workflows/: windows-ci.yml
docs/: acceptance_criteria.md  architecture.md  chart_recommendation.md  packaging.md  performance_budget.md  product_requirements.md  project_status.md  security_review.md
samples/: business_sales.csv  dirty_table.csv  sensor_readings.csv  text_corpus.jsonl
scripts/: benchmark.ps1  build.ps1  dpi_sweep.ps1  generate_samples.ps1  package.ps1  run.ps1  security_review.ps1  setup_dev.ps1  test.ps1
src/quick_insight/: __init__.py  __main__.py  benchmarks.py  bootstrap.py  dpi_sweep.py  main.py  release_packaging.py  security_review.py
src/quick_insight/application/: __init__.py  analysis.py  benchmarks.py  chart_preparation.py  data_export.py  errors.py  importing.py  jobs.py  packaged_smoke.py  profiling.py  project.py  release_packaging.py  security_review.py  transforms.py  (+3 more)
tests/: conftest.py
tests/fixtures/: xlsx.py
tests/integration/: test_chart_preparation.py  test_data_export.py  test_project_persistence.py  test_tabular_analysis.py  test_tabular_import.py  test_tabular_profile.py  test_tabular_transforms.py  test_text_corpus_import.py  test_text_corpus_profile.py  test_text_labeling.py
tests/performance/: test_benchmarks.py  test_dpi_sweep.py
tests/ui/: test_main_window.py  test_table_model.py
tests/unit/: test_cache_cleanup.py  test_chart_recommendation.py  test_chart_rendering.py  test_chart_security.py  test_csv_import.py  test_domain_enums.py  test_errors.py  test_jobs.py  test_packaged_smoke.py  test_profiling.py  test_release_packaging.py  test_samples.py  test_security_review.py  test_settings.py  test_static_ui_guard.py  test_tabular_files.py  test_text_corpus.py
(+36 files in other folders)
