[build-system]
requires = ["setuptools>=80.0", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-insight-desktop"
version = "0.0.0"
description = "Offline-first desktop analysis shell for tabular data and manually labeled text records."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "QuickInsight Desktop contributors" }]
dependencies = [
  "PySide6==6.11.1",
  "duckdb==1.5.4",
  "fastexcel==0.20.2",
  "polars==1.42.1",
  "pyarrow==25.0.0",
  "platformdirs==4.10.0",
  "plotly==6.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-qt==4.5.0",
  "ruff==0.15.21",
  "mypy==2.2.0",
  "Nuitka==4.1.3",
]

[project.scripts]
quick-insight = "quick_insight.main:main"
quick-insight-benchmark = "quick_insight.benchmarks:main"
quick-insight-dpi-sweep = "quick_insight.dpi_sweep:main"
quick-insight-security-review = "quick_insight.security_review:main"
quick-insight-package = "quick_insight.release_packaging:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quick_insight = ["py.typed", "resources/**/*"]

[tool.pytest.ini_options]
minversion = "9.1"
testpaths = ["tests"]
addopts = "-ra"
qt_api = "pyside6"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.13"
packages = ["quick_insight"]
strict = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["PySide6.*", "platformdirs"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true
